# sdl2-cairo-image

./: .gitignore  ChangeLog.md  README.md  sdl2-cairo-image.cabal
playground/: o.md  test.hs  try.hs
src/: Main.hs
src/SDL/Cairo/: Image.hs
src/SDL/Cairo/Image/: Internal.hs  Load.hs  Loader.hs  Render.hs  Renderer.hs
test/Sdl2/Cairo/: ImageSpec.hs
